termix/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
  namespace: termix
  labels:
    app: termix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      containers:
        - name: termix
          image: ghcr.io/lukegus/termix:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: termix-data
              mountPath: /app/data

        - name: guacd
          image: guacamole/guacd:1.6.0
          ports:
            - containerPort: 4822
              name: guacd-http

      volumes:
        - name: termix-data
          persistentVolumeClaim:
            claimName: termix-data
