termix/ingress.yml
---
apiVersion: v1
kind: Service

metadata:
  name: termix
  namespace: termix

spec:
  selector:
    app: termix

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: termix
  namespace: termix
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - termix.vil.nbl.sh
      secretName: termix-tls
  rules:
    - host: termix.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: termix
                port:
                  number: 80
